selfclone/style.css
:root {
  --discord-black: #1f1f24;
  --black-theme-background: --discord-black;
  --on-hover: khaki;
}

html {
  color: var(--discord-black);
  background-color: var(--discord-black);
}
/* html:hover{
  background-color: var(--discord-black);

} */

div {
  background-color: burlywood;
  width: 50px;
  height: 50px;
  color: aquamarine;
  border-style: solid;
  border-color: beige;
  border-width: 1px;
  border-radius: 5px;
}

.chat-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 390px;
  height: 85px;
  margin: 10px 0px;
  position: relative;
  opacity: 0.4;
}
.chat-box *:hover {
  background-color: khaki;
}
.chat-article > :hover {
  background-color: var(--on-hover);
}

.chat-box div {
  width: auto;
  margin: 2px;
}
.chat-profile {
  flex-grow: 0;
  flex-shrink: 0;
}
.chat-article {
  display: flex;
  align-content: space-between;
  flex-direction: column;
  flex-grow: inherit;
  flex-grow: 1;
}
.chat-name {
  display: inline-flex;
}
.chat-leftside {
  display: flex;
  width: ;
  flex-grow: 1;
}
.chat-rightside {
  flex-grow: 0;
  flex-shrink: 0;
}

.chat-date {
  /* position: absolute; */
  flex-grow: 0;
  flex-shrink: 0;
}
div [class~="chat"] {
}

